--- a/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
@@ -6,13 +6,11 @@
     </head>
     <body>
         <div id="report-title" v-cloak>
-            <input type="text" v-model="reportTitle">
             <br>
             <h1>Harvest Report</h1>
             <p>This page is a <i>mockup</i> simplified harvest report</p>
             <p>
             <label for="title">Title:</label>
-            <input type="text" id="text" name="text" value="My Sample Harvest Report" />
             </p>
             <p>
             <label for="start">Start:</label>
@@ -31,7 +29,7 @@
                 <option v-for="area in areas">{{area}}</option>
             </select>
             </p>
-            <input type="button" value="Generate Report" v-on:click='harvestLogs.push({date: "2018-05-01", area: "Orion-3", crop: "Kale", yield: 12, units: "Bunches"})'/>
+            <input type="button" value="Generate Report" @click="generateReportButton"/>
             <hr>
 
             <h1>{{reportTitle ? reportTitle: "Mock Harvest Report"}}</h1>
@@ -88,6 +86,17 @@
                         {date: "2018-05-02", area:"Chuau-1", crop:"Kale", yield: 10, units: "Bunches"},
                         {date: "2018-05-22", area:"SQ7", crop:"Peas", yield: 5, units: "Bunches"}],
                         harvestLogs: [],
+                },
+                methods: { 
+                    generateReportButton: function (){ 
+                        if (this.harvestLogs.length==0) { 
+                            this.harvestLogs.push({date: "2018-05-01", area: "Orion-3", crop: "Kale", yield: 12, units: "Bunches"}); 
+                        } else if (this.harvestLogs.length==1) {
+                            this.harvestLogs.push({date: "2020-05-01", area: "Orion-1", crop: "Carrot", yield: 12, units: "Bunches"}); 
+                        } else if (this.harvestLogs.length==2) { 
+                            this.harvestLogs.push({date: "2018-05-01", area: "Orion-3", crop: "Cucumber", yield: 9, units: "Bunches"}); 
+                        } 
+                    }
                 }
             });
             Vue.config.devtools = true;
