--- a/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
@@ -52,6 +52,7 @@
                      <th>Crop</th>
                      <th>Yield</th>
                      <th>Units</th>
+                     <th>Delete</th>
                  </thead>
                  <tbody>
                     <tr v-for="(t,index) in harvestLogs">
@@ -61,6 +62,9 @@
                          <td>{{t.crop}}</td>
                          <td>{{t.yield}}</td>
                          <td>{{t.units}}</td>
+                         <td>
+                            <button type="button" @click="deleteLog">Delete</button>
+                        </td>
                      </tr>
                  </tbody>
              </table>
@@ -98,7 +102,11 @@
                         } else if (this.harvestLogs.length==2) { 
                             this.harvestLogs.push({date: "2018-05-01", area: "Orion-3", crop: "Cucumber", yield: 9, units: "Bunches"}); 
                         } 
-                    }
+                    },
+                
+                    deleteLog: function(Index) { 
+                        this.harvestLogs.splice(Index, 1); 
+                    } 
                 }
             });
             Vue.config.devtools = true;
