--- a/farmdata2/farmdata2_modules/fd2_school/Vue1/Vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/Vue1/Vue1.html
@@ -45,9 +45,9 @@
           <li><b>User</b>:manager1</li>
           <li><b>Language</b>:English</li>
           <br>
-          <li><b>Start</b>:05/01/2018</li>
-          <li><b>End</b>:05/15/2018</li>
-          <li><b>Crop</b>:Kale</li>
+          <li><b>Start:</b>{{startDate}}</li>
+          <li><b>End:</b>{{endDate}}</li>
+          <li><b>Crop:</b>{{crops}}</li>
      </ul>
           <div>
                <table border = "1">
@@ -58,21 +58,15 @@
                          <th>Yield</th>
                          <th>Units</th>
                     </tr>
-                    <tr>
-                         <td>05/02/2018</td>
-                         <td>Chuau-1</td>
-                         <td>Kale</td>
-                         <td>10</td>
-                         <td>Bunches</td>
+                    <tr v-for="cell in cells">
+                         <td>{{ cell.date }}</td>
+                         <td>{{ cell.area }}</td>
+                         <td>{{ cell.crop }}</td>
+                         <td>{{ cell.yield }}</td>
+                         <td>{{ cell.units }}</td>
                     </tr>
-                    <tr>
-                         <td>05/05/2018</td>
-                         <td>SQ7</td>
-                         <td>Kale</td>
-                         <td>7</td>
-                         <td>Bunches</td>
-                    </tr>
-               </table>    
+               </table>
+                
           </div> 
           
      </body>
@@ -87,9 +81,13 @@
           endDate: "2020-05-15",
           crops: ["Kale", "Peas", "Broccoli"],
           areas: ["All", "Chuau-1", "SQ7"],
+          cells: [
+            {date: "2020-10-08", area: "Chuau-1", crop: "Broccoli", yield: 5, units: "Bunches"},
+            {date: "2020-11-08", area: "SQ7", crop: "Kale", yield: 7, units: "Bunches"}
+        ]
+
        }
      })
-     Vue.config.devtools = true
 </script>
 
 </html>    
