--- a/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
@@ -28,7 +28,7 @@
         </select>
         <br>
         <br>
-        <button type="button">Generate Report</button>
+        <button type="button" @click="harvestLogs.push({date:'2018-05-01', area:'Orion-3', crop:'Kale', yield: '12', units:'Bunches'})">Generate Report</button>
         <hr>
 
         <h1>{{ reportTitle ? reportTitle : "Mock Harvest Report" }}</h1>
@@ -81,8 +81,8 @@
                     "SQ7",
                 ],
                 harvestLogs: [
-                    {date: "2018-05-02", area: "Chuau-1", crop: "Kale", yield: "10", units: "Bunches"},
-                    {date: "2018-05-05", area: "SQ7", crop: "Kale", yield: "7", units: "Bunches"},
+                    // {date: "2018-05-02", area: "Chuau-1", crop: "Kale", yield: "10", units: "Bunches"},
+                    // {date: "2018-05-05", area: "SQ7", crop: "Kale", yield: "7", units: "Bunches"},
                 ]
             },
         });
