--- a/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
@@ -52,6 +52,7 @@
                 <th>Crop</th>
                 <th>Yield</th>
                 <th>Units</th>
+                <th>Delete</th>
             </tr>
             <tr v-for="(log,index) in harvestLogs">
                 <td>{{ index + 1}}</td>
@@ -60,6 +61,7 @@
                 <td>{{ log.crop }}</td>
                 <td>{{ log.yield }}</td>
                 <td>{{ log.units }}</td>
+                <td><button type="button" @click="deleteRow">Delete</button></td>
             </tr>
         </table>
     </div>
@@ -87,6 +89,9 @@
             methods: {
                 generateReport: function() {
                     this.harvestLogs.push({date: "2018-05-01", area: "Orion-3", crop: "Kale", yield: "12", units: "Bunches"});
+                },
+                deleteRow: function(rowIndex) {
+                    this.harvestLogs.splice(rowIndex, 1);
                 }
             }
         });
