--- a/farmdata2/farmdata2_modules/fd2_school/Vue2/Vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/Vue2/Vue2.html
@@ -1,8 +1,3 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Anonymous Button Example</title>
-  </head>
   <body>
     <div id="test">
       <input type="text" v-model="reportTitle" placeholder="Enter report title">
@@ -17,7 +12,9 @@
         <option v-for="area in areas" :value="area">{{ area }}</option>
       </select>
       <h1 v-cloak>Harvest Report</h1>
-      <table>
+      <button class="btn btn-primary" @click="generateReport">Generate Report</button>
+
+      <table border=1>
         <thead>
           <tr>
             <th>Date</th>
@@ -37,8 +34,35 @@
           </tr>
         </tbody>
       </table>
+
+      <!-- move here -->
+
+    <title>Title Field Example</title>
+    <h1>Harvest Report</h1>
+    <p>This page is a <em>mockup</em> of a simplified harvest report</p>
+    <label for="start">Start Date:</label>
+    <input type="date" id="start" name="start-date" v-model="startDate" min="2014-01-01" max="2022-01-01" />
+    <label for="end">End Date:</label>
+    <input type="date" id="end" name="end-date" v-model="endDate" value="20202-05-15" min="2020-05-05" max="2022-01-01" /><br />
+    <hr />
+    <h1>My Sample Harvest:</h1>
+    <p>Details:</p>
+    <label for="title">Title:</label>
+    <input type="text" id="title" name="title" placeholder="Enter the title" />
+    
+    <table border="1">
+      <tr>
+        <th>Date</th>
+        <th>Area</th>
+        <th>Crop</th>
+        <th>Field</th>
+        <th>Units</th>
+      </tr>
+    </table>
     </div>
-    <script src="https://unpkg.com/vue@2"></script>
+   
+
+    
     <script>
       var test = new Vue({
         el: "#test",
@@ -66,27 +90,5 @@
       });
       Vue.config.devtools = true;
     </script>
-    <title>Title Field Example</title>
-    <h1>Harvest Report</h1>
-    <p>This page is a <em>mockup</em> of a simplified harvest report</p>
-    <label for="start">Start Date:</label>
-    <input type="date" id="start" name="start-date" v-model="startDate" min="2014-01-01" max="2022-01-01" />
-    <label for="end">End Date:</label>
-    <input type="date" id="end" name="end-date" v-model="endDate" value="20202-05-15" min="2020-05-05" max="2022-01-01" /><br />
-    <hr />
-    <h1>My Sample Harvest:</h1>
-    <p>Details:</p>
-    <label for="title">Title:</label>
-    <input type="text" id="title" name="title" placeholder="Enter the title" />
-    <button class="btn btn-primary" @click="generateReport">Generate Report</button>
-    <table border="1">
-      <tr>
-        <th>Date</th>
-        <th>Area</th>
-        <th>Crop</th>
-        <th>Field</th>
-        <th>Units</th>
-      </tr>
-    </table>
   </body>
-</html>
+
