--- a/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
@@ -13,9 +13,9 @@
         <br>
         <br>
         <label for="start-date">Start:</label>
-        <input type="date" id="start-date" name="start-date" min="2014-01-01" max="2022-01-01" v-model="reportStartDate" />
+        <input type="date" id="start-date" name="start-date" min="2014-01-01" :disabled="reportStartDate > reportEndDate" max="2022-01-01" :disabled="reportStartDate > reportEndDate" v-model="reportStartDate" />
         <label for="end-date">End:</label>
-        <input type="date" id="end-date" name="end-date" min="2020-05-05" max="2022-01-01" v-model="reportEndDate" />
+        <input type="date" id="end-date" name="end-date" min="2020-05-05" :disabled="reportStartDate > reportEndDate" max="2022-01-01" :disabled="reportStartDate > reportEndDate" v-model="reportEndDate" />
         <br>
         <br>
         <label for="crop">Crop:</label>
@@ -64,6 +64,7 @@
                 <td><button type="button" @click="deleteRow">Delete</button></td>
             </tr>
         </table>
+        <p v-if="harvestLogs.length === 0">There are no matching records!</p>
     </div>
 
     <script>
@@ -71,8 +72,10 @@
             el: "#report",
             data: {
                 reportTitle: "My Sample Harvest Report",
-                reportStartDate: "05/05/2020",
-                reportEndDate: "05/15/2020",
+                // reportStartDate: "05/05/2020",
+                // reportEndDate: "05/15/2020",
+                reportStartDate: "",
+                reportEndDate: "",
                 reportCrop: "Kale",
                 crops: [
                     "Broccoli",
