--- a/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
@@ -43,14 +43,17 @@
 
         <table border=1>
             <tr>
+                <th>Row</th>
                 <th>Date</th>
                 <th>Area</th>
                 <th>Crop</th>
                 <th>Yield</th>
                 <th>Units</th>
             </tr>
-            <tr v-for="logs in reportHarvestLogs"> <td v-for="item in logs">{{item}}</td></tr>
+
+            <tr v-for="(logs, index) in reportHarvestLogs"> <td>{{index}}</td><td v-for="item in logs">{{item}}</td></tr>
         </table>
+              
     </div>
     
     <script>
