--- a/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
@@ -42,7 +42,7 @@
         </ul>
 
         <table border=1>
-            <tr>
+            <tr v-if="reportHarvestLogs.length != 0">
                 <th>Row</th>
                 <th>Date</th>
                 <th>Area</th>
@@ -50,6 +50,8 @@
                 <th>Yield</th>
                 <th>Units</th>
             </tr>
+
+            <p v-if="reportHarvestLogs.length == 0"> no harvest logs to be displayed </p>
 
             <tr v-for="(logs, index) in reportHarvestLogs"> <td>{{index + 1}}</td><td v-for="item in logs">{{item}}</td></tr>
         </table>
