--- a/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue2/vue2.html
@@ -8,7 +8,7 @@
         <br/>
 
         <label for="start">Start:</label>
-        <input type="date" id="start" name="start" v-model="reportStartDate" min="2014-01-01" max="2022-01-01" />
+        <input type="date" id="start" name="start" v-model="reportStartDate" min="2014-01-01" max="2022-01-01" :disabled="reportStartDate > reportEndDate" />
         <label for="end">End:</label>
         <input type="date" id="end" name="end" v-model="reportEndDate" min="2020-05-05" max="2022-01-01" />
         <br/>
