--- a/farmdata2/farmdata2_modules/fd2_school/html/html.html
+++ b/farmdata2/farmdata2_modules/fd2_school/html/html.html
@@ -1,10 +1,11 @@
 
+<div id="harvest-report">
 <h1>Harvest Report</h1>
 <p>This page is a <i>mockup</i> of a simplified harvest report.</p>
 
 <br>
 <label for="title">Title:</label>
-<input type="text" id="title" name="title"/>
+<input type="text" id="title" name="title" v-model="title"/>
 <br>
 <label for="start-date">Start:</label>
 <input type="datetime-local" id="start-date" name="start-date"  value="2020-05-05" min="2014-01-01" max="2022-01-01" />
@@ -29,7 +30,7 @@
 <hr>
 <hr>
 
-<h1>My Sample Harvest Report</h1>
+<h1>{{title}}</h1>
 <p>Details:</p>
 <ul>
     <li><strong>Farm</strong>:Sample Farm</li>
@@ -67,3 +68,11 @@
         <td>Bunches</td>
     </tr>
 </table>
+
+</div>
+<script> var abcd = new Vue({
+    el: '#harvest-report', 
+    data: {
+        title:'My Sample Harvest Report'
+    }
+});</script>
