--- a/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
+++ b/farmdata2/farmdata2_modules/fd2_school/vue1/vue1.html
@@ -34,12 +34,27 @@
 </ul> <br />
 
 <table border="1">
-  <tbody>
-    <tr v-for=" log in logs" :key="log.date">
-      <td>{{ log.date }}</td>
-      <td v-for="area in log.area">{{ area }}</td>
-    </tr>
-   </tbody>
+  <tr>
+    <th>Date</th>
+    <th>Area</th>
+    <th>Crop</th>
+    <th>Yield</th>
+    <th>Units</th>
+  </tr>
+  <tr>
+    <td>05/02/2018</td>
+    <td>Chuau-1</td>
+    <td>Kale</td>
+    <td>10</td>
+    <td>Bunches</td>
+  </tr>
+  <tr>
+    <td>05/05/2018</td>
+    <td>SQ7</td>
+    <td>Kale</td>
+    <td>7</td>
+    <td>Bunches</td>
+  </tr>
 </table>
 </div>
 <script src="https://unpkg.com/vue@2"></script>
@@ -63,10 +78,10 @@
         'sq7',
         'other',
       ] ,
-      logs: [
+      log1: [
         {date: "2018-05-02", area: "Chuau-1", crop: "Kale", yield: 10, units: "Bunches"},
         {date: "2018-05-05", area: "SQ7", crop: "Kale", yield: 7, units: "Bunches"}
-      ] 
+      ]      
     }
   });
   Vue.config.devtools = true; 
